tests/errors/getchar-err2.src
.IPPcode18
defvar GF@fail
defvar GF@len
MOVE GF@fail string@something
STRLEN GF@len GF@fail
write GF@len
GETCHAR GF@fail GF@fail GF@len 
write GF@fail